# MultilingualRAG

./: Dockerfile  Readme.md  app.py  docker-compose.yml  pyproject.toml
chroma_agent_db/: chroma.sqlite3
